--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,6 +21,14 @@ repos:
   rev: v0.3.6
   hooks:
   - id: fprettify
+- repo: https://github.com/cheshirekow/cmake-format-precommit
+  rev: v0.6.13
+  hooks:
+  - id: cmake-format
+    exclude: >-
+      (?x)^(
+        cmake/(CheckFortranSourceRuns|CompilerConfiguration|Find(BLAS|LAPACK)|GetGitRevisionDescription).cmake|
+      )$
 - repo: local
   hooks:
   - id: check-header
@@ -28,7 +36,12 @@ repos:
     entry: ./.pre-commit/check_header.py --verbose
     language: script
     types: [text]
-    exclude: '^(tools|.cp2k)/'
+    exclude: >-
+      (?x)^(
+        tools/.*|
+        .cp2k/.*|
+        .cmake-format.py|
+      )$
   - id: check-doxygen-tags
     name: no doxygen tags present
     entry: '^\s*!>'
