cmake: fix DBCSRConfig and installed files
* fixes #353
* also, `dbcsr_tensor_api.mod` was missing from the installation

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -372,6 +372,8 @@ install(
   ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}")
 install(FILES "${CMAKE_CURRENT_BINARY_DIR}/dbcsr_api.mod"
         DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
+install(FILES "${CMAKE_CURRENT_BINARY_DIR}/dbcsr_tensor_api.mod"
+        DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
 
 if (WITH_C_API)
   install(
