--- a/src/cmake/DBCSRConfig.cmake.in
+++ b/src/cmake/DBCSRConfig.cmake.in
@@ -16,4 +16,9 @@ if (@USE_CUDA@)
   enable_language(CUDA)
 endif ()
 
+if ("@USE_SMM@" MATCHES "libxsmm")
+  find_package(PkgConfig)
+  pkg_check_modules(deps REQUIRED IMPORTED_TARGET libxsmmf)
+endif ()
+
 include("${CMAKE_CURRENT_LIST_DIR}/DBCSRTargets.cmake")
