--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -373,6 +373,7 @@ endif ()
 include(CompilerConfiguration)
 include(CheckCompilerSupport)
 
+# subdirectories
 add_subdirectory(src)
 
 include(CTest)
@@ -383,5 +384,7 @@ endif ()
 if (WITH_EXAMPLES)
   add_subdirectory(examples)
 endif ()
+
+add_subdirectory(docs)
 
 include(CustomTargets)
